# genai-mcps

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/skills/local-docker-deploy/: SKILL.md
clients/adk-agui/: README.md  pyproject.toml
clients/adk-agui/src/: main.py
clients/adk-agui/src/agent/: agent.py  tools.py
clients/adk-agui/src/ui/: app.py
clients/adk-agui/src/ui/static/: index.html
clients/cli/: README.md  pyproject.toml
clients/cli/src/: main.py  repl.py
clients/cli/src/commands/: chat.py  connect.py  tools.py
clients/langgraph/: README.md  pyproject.toml
clients/langgraph/src/: main.py
clients/langgraph/src/graph/: graph.py  nodes.py  state.py
clients/langgraph/src/mcp/: adapters.py  client.py
docs/: architecture.md
gateway/: Dockerfile  README.md  pyproject.toml
gateway/config/: servers.yaml
gateway/src/: auth.py  main.py  registry.py  router.py
infra/: credentials.yaml
infra/keycloak/: README.md  realm-export.json
registry/backend/: Dockerfile  README.md  pyproject.toml
registry/backend/src/: database.py  main.py  models.py  schemas.py
registry/backend/src/routers/: health.py  servers.py
registry/backend/src/services/: status_checker.py
registry/frontend/: Dockerfile  README.md  index.html  package.json
registry/frontend/src/: App.tsx  main.tsx  types.ts
registry/frontend/src/api/: servers.ts
registry/frontend/src/components/: MCPCard.tsx  RegisterForm.tsx  StatusBadge.tsx
registry/frontend/src/pages/: RegisterPage.tsx
servers/: Dockerfile.template  README.md
servers/calculator/: Dockerfile  README.md  pyproject.toml
servers/calculator/src/: server.py
servers/greeting/: Dockerfile  README.md  pyproject.toml
servers/greeting/src/: server.py
servers/stock/: Dockerfile  README.md  pyproject.toml
servers/stock/src/: server.py
servers/test-mcp-server/: README.md
servers/weather/: Dockerfile  README.md  pyproject.toml
servers/weather/src/: server.py
shared/: pyproject.toml
shared/mcp_utils/: __init__.py  client_base.py  credentials.py  oauth_middleware.py  server_base.py  types.py
