[project]
name = "mcp-gateway"
version = "0.2.0"
description = "MCP Gateway — aggregating proxy that discovers tools from upstream MCP servers and re-exposes them as a unified MCP endpoint"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.38.0",
]

[project.scripts]
gateway = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
