[project]
name = "mcp-shared"
version = "0.1.0"
description = "Shared utilities, base classes, and types for MCP servers and clients"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "starlette>=0.38.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
