[project]
name = "mcp-client-adk-agui"
version = "0.1.0"
description = "Conversational agentic app using Google ADK + AG-UI, connected to any MCP server via streamable HTTP"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "ag-ui-protocol>=0.1.0",
    "mcp[cli]>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
adk-agui = "src.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
