[project]
name = "mcp-client-cli"
version = "0.1.0"
description = "Terminal-based MCP client with Gemini LLM and MCP tool support"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
]

[project.scripts]
mcp-cli = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
