[project]
name = "mcp-client-langgraph"
version = "0.1.0"
description = "LangGraph conversational agent using Gemini, connected to MCP servers via streamable HTTP"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "mcp[cli]>=1.5.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
langgraph-mcp = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
