[project]
name = "mcp-calculator-server"
version = "0.1.0"
description = "Calculator MCP server — open (no auth), basic math operations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.38.0",
    "pydantic>=2.7.0",
]

[project.scripts]
calculator-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
