[project]
name = "mcp-stock-server"
version = "0.1.0"
description = "Stock Price MCP server — real-time quotes, history & company info via Yahoo Finance, served as streamable HTTP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.38.0",
    "pydantic>=2.7.0",
]

[project.scripts]
stock-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
