[project]
name = "mcp-weather-server"
version = "0.1.0"
description = "Weather MCP server — US weather alerts and forecasts via NWS API, served as streamable HTTP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.38.0",
    "pydantic>=2.7.0",
]

[project.scripts]
weather-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
